feat(list): List last 10 stable versions from remote

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,8 +9,10 @@
             "cwd": "${workspaceFolder}",
             "program": "main.go",
             "args": [
-                "use",
-                "-c"
+                // "use",
+                // "-c"
+                "list",
+                "remote",
             ],
             "debugAdapter": "dlv-dap",
             "env": {
