chore: Trigger ci

--- a/.github/workflows/pull-requests.yml
+++ b/.github/workflows/pull-requests.yml
@@ -5,11 +5,11 @@ on:
   pull_request:
     branches:
       - main
-    paths:
-      - 'internal/**'
-      - 'cmd/**'
-      - 'go.mod'
-      - 'go.sum'
+    # paths:
+    #   - 'internal/**'
+    #   - 'cmd/**'
+    #   - 'go.mod'
+    #   - 'go.sum'
 
 jobs:
   build:
