--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -25,6 +25,12 @@ repos:
         entry: bash -c 'go run ./main.go > docs/github-pages/static/helper.out'
         language: system
         verbose: true
+      - id: update-dockerhub-readme
+        name: update-dockerhub-readme
+        entry: bash -c 'scripts/update-dockerhub-readme.sh'
+        language: system
+        files: ^(CHANGELOG\.md|docs/dockerhub/README\.md)$
+        verbose: true
       # - id: kuve-documentation
       #   name: kuve-documentation
       #   entry: bash -c 'cd docs/github-pages && pnpm build'
