ci: Fix gorelease config

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -17,7 +17,9 @@ builds:
     goos:
       - linux
       # - windows
-      # - darwin
+      - darwin
+    ldflags:
+      - -s -w -X 'main.appVersion={{.Version}}' -X 'main.buildCommit={{.Commit}}' -X 'main.buildTime={{.CommitDate}}'
 
 archives:
   - formats: "tar.gz"
