--- a/.github/workflows/pull-requests.yml
+++ b/.github/workflows/pull-requests.yml
@@ -34,13 +34,14 @@ jobs:
 
       - name: Build
         run: |
-          go build -v -ldflags="-X 'github.com/germainlefebvre4/kuve/cmd.appVersion=${{ github.sha }}'" -o kuve ./main.go
+          make build
           echo "Build completed."
 
       - name: Test with the Go CLI
-        run: go test ./...
+        run: |
+          make test
 
       - name: Test with kuve
         run: |
-          ./kuve --version
-          ./kuve --help
+          ./bin/kuve --version
+          ./bin/kuve --help
