ci: Add deps to docker publish

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -50,6 +50,7 @@ jobs:
             path: dist/*
 
   docker-publish:
+    needs: goreleaser
     uses: ./.github/workflows/docker-publish.yml
     with:
       version: ${{ github.ref_name }}
